Added build pkgs with NixOS and update the readme.md